--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
+  "name": "astronautical-antimatter",
+  "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
   "dependencies": {
-    "astro-icon": "^1.1.5"
+    "astro": "^5.16.0"
   }
 }
