--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
-    "astro": "^5.16.0"
+    "@iconify-json/mdi": "^1.2.3",
+    "astro": "^5.16.0",
+    "astro-particles": "^2.10.0",
+    "tsparticles-slim": "^2.12.0"
   }
 }
