--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "@iconify-json/mdi": "^1.2.3",
     "astro": "^5.16.0",
+    "astro-icon": "^1.1.5",
     "astro-particles": "^2.10.0",
     "tsparticles-slim": "^2.12.0"
   }
