--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "astro": "^5.16.0",
     "astro-icon": "^1.1.5",
     "astro-particles": "^2.10.0",
+    "tsparticles": "^3.9.1",
+    "tsparticles-engine": "^2.12.0",
     "tsparticles-slim": "^2.12.0"
   }
 }
