--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
+    "@iconify-json/devicon": "^1.2.51",
     "@iconify-json/mdi": "^1.2.3",
     "astro": "^5.16.0",
     "astro-icon": "^1.1.5",
